# coinprs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  coinprs.yml  sample.config.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
sample_configs/: 0-sample.yml  coinprs.simple.ini  coinprs.simple.json  coinprs.simple.toml  coinprs.simple.yml
src/: config.rs  currency.rs  main.rs  table.rs
src/clap/: en.yml
tests/: convert.rs  test.rs
