[package]
name = "coinprs"
description = "a fast unixy crypto price tracker 👀!"
version = "0.1.0"
authors = ["candoizo <candoizo@protonmail.com>"]
edition = "2018"
keywords = ["cryptocurrency", "currency", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coingecko = "0.1.0"
tokio = {version="1.1.1", features=["full"]}
isahc = { version = "0.9", default-features = false, features = ["http2", "text-decoding"]}
comfy-table = "2.1.0"
seahorse = "1.1.1"
rusty-money = {version="0.4.1", features=["iso", "crypto"]}
colored = "2.0.0"
config = "0.10.1"
rust_decimal = "1.10.1"
log = "0.4.14"
simplelog = "0.9.0"
chrono-humanize = "0.1.1"
chrono = "0.4.19"
libmath = "0.2.1"
colors-transform = "0.2.11"
futures = "0.3.12"
tint = "1.0.1"
